feat: post-it responsive

--- a/index.html
+++ b/index.html
@@ -1527,8 +1527,7 @@
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z7u6Aq2tiMg"
-                                frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
@@ -1536,8 +1535,7 @@
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z7u6Aq2tiMg"
-                                frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
@@ -1993,8 +1991,7 @@
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo ?</figcaption>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z7u6Aq2tiMg"
-                                frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
@@ -2003,8 +2000,7 @@
                         <figure>
                             <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet ?
                             </figcaption>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z7u6Aq2tiMg"
-                                frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
@@ -2012,8 +2008,7 @@
 
                         <figure>
                             <figcaption>En quoi la démarche Transfo a fait évoluer votre projet ?</figcaption>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Z7u6Aq2tiMg"
-                                frameborder="0"
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
                                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                                 allowfullscreen>
                             </iframe>
