feat: test stickyHeader

--- a/index.html
+++ b/index.html
@@ -2801,9 +2801,18 @@
 
                     </div>
                 </article>
+
+                <section class="tab footer">
+
+                    <header id="section7">
+                        <p>contenu du footer</p>
+                    </header>
+                </section>
+
             </div>
         </section>
     </main>
+
 
     <script src="script.js"></script>
 </body>
