feat: test stickyHeader

--- a/index.html
+++ b/index.html
@@ -60,14 +60,20 @@
 
     <main class="tabs">
 
-        <!-- 0 - CADRE EXPERIMENTAL -->
+
+        <section>
+            <header id="section0">
+            </header>
+        </section>
+
+        <!-- 1 - CADRE EXPERIMENTAL -->
 
         <section class="tab ce">
 
-            <header id="section0">
+            <header id="section1">
 
                 <div class="header-content">
-                    <div class="tab-title0">
+                    <div class="tab-title1">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -426,13 +432,13 @@
         </section>
 
 
-        <!-- 1 - PASSER EN MODE PLURIDISCIPLINAIRE-->
+        <!-- 2 - PASSER EN MODE PLURIDISCIPLINAIRE-->
 
         <section class="tab mp">
 
-            <header id="section1">
+            <header id="section2">
                 <div class="header-content">
-                    <div class="tab-title1">
+                    <div class="tab-title2">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -849,14 +855,14 @@
         </section>
 
 
-        <!-- 2 - RYTHMER LE PROGRAMME -->
+        <!-- 3 - RYTHMER LE PROGRAMME -->
 
         <section class="tab p">
 
-            <header id="section2">
+            <header id="section3">
                 <div class="header-content">
 
-                    <div class="tab-title2">
+                    <div class="tab-title3">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -1140,14 +1146,14 @@
         </section>
 
 
-        <!-- 3 - IMPLIQUER ET FORMER LES AGENTS -->
+        <!-- 4 - IMPLIQUER ET FORMER LES AGENTS -->
 
         <section class="tab a">
 
-            <header id="section3">
+            <header id="section4">
                 <div class="header-content">
 
-                    <div class="tab-title3">
+                    <div class="tab-title4">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -1548,14 +1554,14 @@
         </section>
 
 
-        <!-- 4 - TRAVAILLER A PARTIR DE CAS CONCRETS -->
+        <!-- 5 - TRAVAILLER A PARTIR DE CAS CONCRETS -->
 
         <section class="tab cc">
 
-            <header id="section4">
+            <header id="section5">
                 <div class="header-content">
 
-                    <div class="tab-title4">
+                    <div class="tab-title5">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -2020,14 +2026,14 @@
         </section>
 
 
-        <!-- 5 - S'APPUYER SUR L'ECOSYSTEME -->
+        <!-- 6 - S'APPUYER SUR L'ECOSYSTEME -->
 
         <section class="tab e">
 
-            <header id="section5">
+            <header id="section6">
                 <div class="header-content">
 
-                    <div class="tab-title5">
+                    <div class="tab-title6">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -2391,14 +2397,14 @@
         </section>
 
 
-        <!-- 6 - SE PROJECTER DANS LE FUTUR -->
+        <!-- 7 - SE PROJECTER DANS LE FUTUR -->
 
         <section class="tab fl">
 
-            <header id="section6">
+            <header id="section7">
                 <div class="header-content">
 
-                    <div class="tab-title6">
+                    <div class="tab-title7">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -2804,7 +2810,7 @@
 
                 <section class="tab footer">
 
-                    <header id="section7">
+                    <header id="section8">
                         <p>contenu du footer</p>
                     </header>
                 </section>
