feat: add sticky NavBar & header

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="light">
-    <header class="mainNav">
+    <header class="mainNav sticky">
 
         <!-- NAV BAR -->
 
@@ -37,12 +37,6 @@
             </ul>
 
         </nav>
-    </header>
-
-
-    <!-- ABOUT -->
-
-    <main class="about">
 
         <!-- LABEL -->
 
@@ -59,9 +53,14 @@
             </div>
         </div>
 
-        <p class="sheet">( À propos )</p>
+    </header>
+
+    <!-- ABOUT -->
+
+    <main class="about">
 
         <div class="content">
+            <p class="sheet">( À propos )</p>
             <section>
 
                 <!-- ILLUSTRATIONS -->
