--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="light">
-    <header class="mainNav">
+    <header class="mainNav sticky">
 
         <!-- NAV BAR -->
 
@@ -36,9 +36,6 @@
                 </li>
             </ul>
         </nav>
-    </header>
-
-    <main class="contact">
 
         <!-- LABEL -->
 
@@ -55,11 +52,14 @@
             </div>
         </div>
 
-        <!-- CONTACT -->
+    </header>
 
-        <p class="sheet">( Contact )</p>
+    <!-- CONTACT -->
+
+    <main class="contact">
 
         <div class="content">
+            <p class="sheet">( Contact )</p>
             <div class="container">
 
             </div>
