--- a/cousins.html
+++ b/cousins.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="light">
-    <header class="mainNav">
+    <header class="mainNav sticky">
 
         <!-- NAV BAR -->
 
@@ -37,11 +37,6 @@
             </ul>
 
         </nav>
-    </header>
-
-    <!-- COUSINS -->
-
-    <main class="cousins">
 
         <!-- LABEL -->
 
@@ -56,13 +51,18 @@
                 </p>
             </div>
         </div>
+    </header>
 
-        <!-- INTRO -->
+    <!-- COUSINS -->
 
-        <p class="sheet">( Nos cousins )</p>
+    <main class="cousins">
 
         <div class="content">
+            <p class="sheet">( Nos cousins )</p>
+
             <div class="container">
+
+                <!-- INTRO -->
 
                 <div class="main-intro">
                     <p>D’autres acteurs ont mené ces dernières années des démarches de préfiguration ou d’accompagnement
