--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <script src="script.js"></script>
 
     <title>La Transfo • Code Source</title>
     <link rel="icon" type="image/png" href="images/favicon-2.png" />
@@ -13,7 +14,7 @@
 
 <body class="dark">
 
-    <header class="mainNav">
+    <header class="mainNav sticky">
 
         <!-- NAV BAR -->
 
@@ -60,20 +61,14 @@
 
     <main class="tabs">
 
-
-        <section>
-            <header id="section0">
-            </header>
-        </section>
-
         <!-- 1 - CADRE EXPERIMENTAL -->
 
         <section class="tab ce">
 
-            <header id="section1">
+            <header class="header">
 
                 <div class="header-content">
-                    <div class="tab-title1">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -436,9 +431,9 @@
 
         <section class="tab mp">
 
-            <header id="section2">
+            <header class="header">
                 <div class="header-content">
-                    <div class="tab-title2">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -859,10 +854,10 @@
 
         <section class="tab p">
 
-            <header id="section3">
+            <header class="header">
                 <div class="header-content">
 
-                    <div class="tab-title3">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -1150,10 +1145,10 @@
 
         <section class="tab a">
 
-            <header id="section4">
+            <header class="header">
                 <div class="header-content">
 
-                    <div class="tab-title4">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -1533,17 +1528,13 @@
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
                             </iframe>
                         </figure>
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
                             </iframe>
                         </figure>
 
@@ -1558,10 +1549,10 @@
 
         <section class="tab cc">
 
-            <header id="section5">
+            <header class="header">
                 <div class="header-content">
 
-                    <div class="tab-title5">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -1997,26 +1988,20 @@
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo ?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
                             </iframe>
                         </figure>
 
                         <figure>
                             <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet ?
                             </figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
                             </iframe>
                         </figure>
 
                         <figure>
                             <figcaption>En quoi la démarche Transfo a fait évoluer votre projet ?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0"
-                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
                             </iframe>
                         </figure>
 
@@ -2030,10 +2015,10 @@
 
         <section class="tab e">
 
-            <header id="section6">
+            <header class="header">
                 <div class="header-content">
 
-                    <div class="tab-title6">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -2401,10 +2386,10 @@
 
         <section class="tab fl">
 
-            <header id="section7">
+            <header class="header">
                 <div class="header-content">
 
-                    <div class="tab-title7">
+                    <div class="tab-title">
 
                         <div class="marquee-content">
                             <div class="h1">
@@ -2808,19 +2793,11 @@
                     </div>
                 </article>
 
-                <section class="tab footer">
-
-                    <header id="section8">
-                        <p>contenu du footer</p>
-                    </header>
-                </section>
-
             </div>
         </section>
     </main>
 
 
-    <script src="script.js"></script>
 </body>
 
 </html>
