feat: responsive post-it mobil

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                             <!-- CONTRAT -->
 
-                            <div id="contrat" class="post-it contrat">
+                            <div id="contrat" class="post-it contrat top">
                                 <div class="container">
 
                                     <h3>La forme du contrat</h3>
@@ -179,7 +179,7 @@
 
                             <!-- CO-FINANCEMANT -->
 
-                            <div id="co-financement" class="post-it co-financement">
+                            <div id="co-financement" class="post-it co-financement top">
                                 <div class="container">
 
                                     <h3>Le co-financement du programme</h3>
@@ -205,7 +205,7 @@
 
                             <!-- COORDINATION -->
 
-                            <div id="coordination" class="post-it coordination">
+                            <div id="coordination" class="post-it coordination top">
                                 <div class="container">
 
                                     <h3>La coordination bicéphale</h3>
@@ -537,7 +537,7 @@
 
                             <!-- DESIGN -->
 
-                            <div id="design" class="post-it design">
+                            <div id="design" class="post-it design top">
                                 <div class="container">
 
                                     <h3>DESIGN</h3>
@@ -958,7 +958,7 @@
 
                             <!-- TRAVAIL -->
 
-                            <div id="travail" class="post-it travail">
+                            <div id="travail" class="post-it travail top">
                                 <div class="container">
 
                                     <h3>Les temps de travail</h3>
@@ -1255,7 +1255,7 @@
 
                             <!-- SECOND CERCLE -->
 
-                            <div class="post-it second">
+                            <div class="post-it second top">
                                 <div class="container">
 
                                     <h3>Différents modes de fonctionnement du groupe</h3>
@@ -1660,7 +1660,7 @@
 
                             <!-- METZ -->
 
-                            <div id="metz" class="post-it metz">
+                            <div id="metz" class="post-it metz top">
                                 <div class="container">
 
                                     <h3>Metz, les bureaux volants</h3>
@@ -2126,7 +2126,7 @@
 
                             <!-- ECOSYSTEME INTERNE -->
 
-                            <div id="ecosysteme" class="post-it ecosysteme">
+                            <div id="ecosysteme" class="post-it ecosysteme top">
                                 <div class="container">
 
                                     <h3>En direction de l’écosystème interne</h3>
