--- a/about.html
+++ b/about.html
@@ -37,10 +37,15 @@
             </ul>
 
         </nav>
+    </header>
+
+    <!-- ABOUT -->
+
+    <main class="about">
 
         <!-- LABEL -->
 
-        <div class="label">
+        <div class="label sticky">
             <div class="container">
 
                 <div>
@@ -52,12 +57,6 @@
 
             </div>
         </div>
-
-    </header>
-
-    <!-- ABOUT -->
-
-    <main class="about">
 
         <div class="content">
             <p class="sheet">( À propos )</p>
