--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,17 @@
             </ul>
         </nav>
 
+
+    </header>
+
+    <!-- CONTACT -->
+
+    <main class="contact">
+
+
         <!-- LABEL -->
 
-        <div class="label">
+        <div class="label sticky">
             <div class="container">
 
                 <div>
@@ -51,12 +59,6 @@
 
             </div>
         </div>
-
-    </header>
-
-    <!-- CONTACT -->
-
-    <main class="contact">
 
         <div class="content">
             <p class="sheet">( Contact )</p>
