--- a/cousins.html
+++ b/cousins.html
@@ -38,9 +38,15 @@
 
         </nav>
 
+    </header>
+
+    <!-- COUSINS -->
+
+    <main class="cousins">
+
         <!-- LABEL -->
 
-        <div class="label">
+        <div class="label sticky">
             <div class="container">
 
                 <div>
@@ -51,11 +57,6 @@
                 </p>
             </div>
         </div>
-    </header>
-
-    <!-- COUSINS -->
-
-    <main class="cousins">
 
         <div class="content">
             <p class="sheet">( Nos cousins )</p>
