--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 
     <title>La Transfo • About</title>
-    <link rel="icon" type="image/png" href="images/favicon-2.png" />
+    <link rel="icon" type="image/png" href="images/logos/favicon.png" />
 </head>
 
 <body class="light">
