--- a/cousins.html
+++ b/cousins.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 
     <title>La Transfo • Cousins</title>
-    <link rel="icon" type="image/png" href="images/favicon-2.png" />
+    <link rel="icon" type="image/png" href="images/logos/favicon.png" />
 </head>
 
 <body class="light">
@@ -57,6 +57,8 @@
                 </p>
             </div>
         </div>
+
+        <!-- CONTENT -->
 
         <div class="content">
             <p class="sheet">( Nos cousins )</p>
@@ -301,6 +303,7 @@
 
             </div>
         </div>
+
     </main>
 </body>
 
