--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 
     <title>La Transfo • Code Source</title>
-    <link rel="icon" type="image/png" href="images/favicon-2.png" />
+    <link rel="icon" type="image/png" href="images/logos/favicon.png" />
 </head>
 
 <body class="dark">
