feat: tablet responsive illustrations

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     </div>
 
                     <div class="content bg"
-                        style="background-image:  url(images/mp/mp-legendes.svg), url(images/mp/moissonneuse.png);">
+                        style="background-image:  url(images/mp/mp-legendes.svg), url(images/mp/test-moissonneuse.png);">
 
 
                         <div class="mini-img" style="background-image: url(images/mp/moissonneuse-min.png);">
