feat: change illustrations FIG. en html

--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/ce/ce-legendes.svg), url(images/ce/carcasse.png);">
+                        <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/ce/carcasse-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
@@ -471,10 +472,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/mp/mp-legendes.svg), url(images/mp/moissonneuse.png);">
-
+                        <p class="fig">Fig.mp</p>
 
                         <div class="mini-img" style="background-image: url(images/mp/moissonneuse-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
@@ -894,9 +895,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/p/p-legendes.svg), url(images/p/pedales.png);">
+                        <p class="fig">Fig.p</p>
 
                         <div class="mini-img" style="background-image: url(images/p/pedales-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
@@ -1186,9 +1188,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/a/a-legendes.svg), url(images/a/transmission.png);">
+                        <p class="fig">Fig.a</p>
 
                         <div class="mini-img" style="background-image: url(images/a/transmission-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
@@ -1590,12 +1593,19 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/cc/cc-legendes.svg), url(images/cc/suspensions.png);">
+                        <p class="fig">Fig.cc</p>
 
                         <div class="mini-img" style="background-image: url(images/cc/suspensions-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
+                            <p>
+                                <a href="#mulhouse">(m) Les megotiers</a>
+                            </p>
+                            <p>
+                                <a href="#dunkerque">(bf) Le bois du fort</a>
+                            </p>
                             <p>
                                 <a href="#metz">(bv) Les bureaux-volants</a>
                             </p>
@@ -1603,16 +1613,10 @@
                                 <a href="#lille">(bc) Le brico concierge</a>
                             </p>
                             <p>
-                                <a href="#mulhouse">(m) Les megotiers</a>
-                            </p>
-                            <p>
                                 <a href="#strasbourg">(is) Les inscriptions scolaires</a>
                             </p>
                             <p>
                                 <a href="#paris">(pa) Les pieds d'arbres</a>
-                            </p>
-                            <p>
-                                <a href="#dunkerque">(bf) Le bois du fort</a>
                             </p>
                         </div>
 
@@ -2056,9 +2060,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/e/e-legendes.svg), url(images/e/gps.png);">
+                        <p class="fig">Fig.e</p>
 
                         <div class="mini-img" style="background-image: url(images/e/gps-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
@@ -2427,9 +2432,10 @@
 
                     <div class="content bg"
                         style="background-image:  url(images/fl/fl-legendes.svg), url(images/fl/hautparleur.png);">
+                        <p class="fig">Fig.fl</p>
 
                         <div class="mini-img" style="background-image: url(images/fl/hautparleur-min.png);">
-                            <p>Fig.cs</p>
+                            <p class="fig-cs">Fig.cs</p>
                         </div>
 
                         <div class="legende">
