feat: tab max-width

--- a/index.html
+++ b/index.html
@@ -2440,7 +2440,7 @@
 
                         <div class="legende">
                             <p>
-                                <a href="#iteration">(it) Iterations</a>
+                                <a href="#iteration">(it) Itérations</a>
                             </p>
                             <p>
                                 <a href="#implication">(i) Implication</a>
