--- a/about.html
+++ b/about.html
@@ -65,8 +65,10 @@
                 <!-- ILLUSTRATIONS -->
 
                 <article class="bg general-bg"
-                    style="background-image: url(images/about/cs-legendes.svg), url(images/about/generale.png);">
-                    <div class="bg a-bg"
+                    style="background-image: url(images/about/generale-legendes.svg), url(images/about/generale.png);">
+                    <div class="container bg about-bg"
+                        style="background-image: url(images/about/about-legendes.svg), url(images/about/about-illustrations.png);">
+                        <!-- <div class="container bg a-bg"
                         style="background-image: url(images/about/a-legendes.svg), url(images/about/transmission-about.png);">
                         <div class="bg mp-bg"
                             style="background-image: url(images/about/mp-legendes.svg), url(images/about/moissonneuse-2.png);">
@@ -79,78 +81,78 @@
                                         <div class="bg ce-bg"
                                             style="background-image: url(images/about/ce-legendes.svg), url(images/ce/carcasse.png);">
                                             <div class="bg p-bg"
-                                                style="background-image: url(images/about/p-legendes.svg), url(images/p/pedales.png);">
+                                                style="background-image: url(images/about/p-legendes.svg), url(images/p/pedales.png);"> -->
 
-                                                <!-- A PROPOS -->
+                        <!-- A PROPOS -->
 
-                                                <div class="container">
-                                                    <div class="side first">
+                        <div class="side first">
 
-                                                        <p>La Transfo Code Source <br>
-                                                            <strong>« open source » * le protocole de création de
-                                                                laboratoires d’innovation internes</strong>
-                                                            aux collectivités territoriales, expérimenté lors du
-                                                            programme La Transfo entre 2016 et 2020. <br>
-                                                            Sept principes actifs composent La Transfo :
-                                                        </p>
+                            <p>La Transfo Code Source <br>
+                                <strong>« open source » * le protocole de création de
+                                    laboratoires d’innovation internes</strong>
+                                aux collectivités territoriales, expérimenté lors du
+                                programme La Transfo entre 2016 et 2020.
+                                Sept principes actifs composent La Transfo :
+                            </p>
 
-                                                    </div>
-                                                    <ul>
-                                                        <li><strong>poser un cadre expérimental</strong> (ce)</li>
-                                                        <li><strong>passer en mode pluridisciplinaire</strong> (mp)
-                                                        </li>
-                                                        <li><strong>rythmer le programme</strong> (p)</li>
-                                                        <li><strong>impliquer et former les agents</strong> (a)</li>
-                                                        <li><strong>travailler à partir de cas concrets</strong>
-                                                            (cc)
-                                                        </li>
-                                                        <li><strong>s’appuyer sur l'écosystème</strong> (e)</li>
-                                                        <li><strong>se projeter dans le futur labo</strong> (fl)
-                                                        </li>
-                                                    </ul>
-                                                    <div class="side space">
+                        </div>
+                        <ul>
+                            <li><strong>poser un cadre expérimental</strong> (ce)</li>
+                            <li><strong>passer en mode pluridisciplinaire</strong> (mp)
+                            </li>
+                            <li><strong>rythmer le programme</strong> (p)</li>
+                            <li><strong>impliquer et former les agents</strong> (a)</li>
+                            <li><strong>travailler à partir de cas concrets</strong>
+                                (cc)
+                            </li>
+                            <li><strong>s’appuyer sur l'écosystème</strong> (e)</li>
+                            <li><strong>se projeter dans le futur labo</strong> (fl)
+                            </li>
+                        </ul>
+                        <div class="side space">
 
-                                                        <p>Ce site vise à expliciter ces principes et apporte un
-                                                            retour
-                                                            d’expérience sur leur mise en oeuvre dans les
-                                                            différentes
-                                                            collectivités engagées dans La Transfo. L’objectif est
-                                                            de
-                                                            permettre à chacun de se réapproprier et d’ajuster ces
-                                                            principes d’action à son contexte.
-                                                        </p>
+                            <p>Ce site vise à expliciter ces principes et apporte un
+                                retour
+                                d’expérience sur leur mise en oeuvre dans les
+                                différentes
+                                collectivités engagées dans La Transfo. L’objectif est
+                                de
+                                permettre à chacun de se réapproprier et d’ajuster ces
+                                principes d’action à son contexte.
+                            </p>
 
-                                                    </div>
-                                                    <div class="side definition last">
+                        </div>
+                        <div class="side definition last">
 
-                                                        <p>* En informatique,<br>
-                                                            le code source est un texte qui présente les
-                                                            instructions
-                                                            composant un programme sous une forme lisible,<br>
-                                                            telles qu'elles ont été écrites dans un langage de
-                                                            programmation.<br>
-                                                            Dans la communauté open source, les développeurs mettent
-                                                            gratuitement le code source à disposition d’autres
-                                                            programmeurs pour inciter à la réutilisation de briques
-                                                            logicielles développées ailleurs et ainsi développer ou
-                                                            améliorer des logiciels à long terme.
-                                                        </p>
-                                                    </div>
+                            <p>* En informatique,
+                                le code source est un texte qui présente les
+                                instructions
+                                composant un programme sous une forme lisible,
+                                telles qu'elles ont été écrites dans un langage de
+                                programmation.<br>
+                                Dans la communauté open source, les développeurs mettent
+                                gratuitement le code source à disposition d’autres
+                                programmeurs pour inciter à la réutilisation de briques
+                                logicielles développées ailleurs et ainsi développer ou
+                                améliorer des logiciels à long terme.
+                            </p>
+                        </div>
 
-                                                    <div class="side inventors">
+                        <!-- <div class="side inventors">
 
-                                                        <img src="images/logos/Inventors.svg" alt="">
+                            <img src="images/logos/Inventors.svg" alt="">
 
-                                                    </div>
-                                                </div>
+                        </div> -->
+                    </div>
 
-                                            </div>
-                                        </div>
+                    <!-- </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+
+
                 </article>
 
                 <!-- QUESTIONS -->
