--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                     <p class="intro"><strong>Stéphane Vincent</strong>, délégué général de la 27ème region.
                     </p>
 
-                    <div class="links-box"
+                    <div class="links-box audio"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
@@ -824,7 +824,7 @@
 
                     <!-- AUDIO -->
 
-                    <div class=" links-box"
+                    <div class="links-box  audio"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
@@ -1539,7 +1539,7 @@
 
                     <!-- AUDIO -->
 
-                    <div class=" links-box"
+                    <div class="links-box audio"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
@@ -1585,13 +1585,17 @@
 
                         <figure>
                             <figcaption>“Témoignage d’ambassadeurs” (Strasbourg)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/NxzhQxeZS8o" frameborder="1"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
                         <figure>
                             <figcaption>“Conseil aux ambassadeurs par des ambassadeurs” (Lille)</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
+                            <iframe src="https://www.youtube.com/embed/b5meDHC_T4I" frameborder="1"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                             </iframe>
                         </figure>
 
@@ -2080,26 +2084,29 @@
 
                     <!-- VDEO -->
 
-                    <div class=" links-box video"
+                    <div class="links-box video"
                         style="background-image: url(images/left-eye.png), url(images/right-eye.png);">
 
                         <figure>
                             <figcaption>Qu'est ce qui vous a motivé à prendre contact avec La Transfo?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
-                            </iframe>
+                            <iframe src="https://www.youtube.com/embed/cpTZdel6G_k" frameborder="1"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </figure>
 
                         <figure>
                             <figcaption>Qu'avez vous apprécié dans l'implication de La Transfo sur votre projet?
                             </figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
-                            </iframe>
+                            <iframe src="https://www.youtube.com/embed/hiKdEPQrm5A" frameborder="1"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </figure>
 
                         <figure>
                             <figcaption>En quoi la démarche Transfo a fait évoluer votre projet?</figcaption>
-                            <iframe src="https://www.youtube.com/embed/Z7u6Aq2tiMg" frameborder="0" allowfullscreen>
-                            </iframe>
+                            <iframe src="https://www.youtube.com/embed/vFwH-9JuNVo" frameborder="1"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </figure>
 
                     </div>
@@ -2453,7 +2460,7 @@
 
                     <!-- AUDIO -->
 
-                    <div class=" links-box"
+                    <div class="links-box audio"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
@@ -2830,7 +2837,7 @@
 
                     <!-- AUDIO -->
 
-                    <div class=" links-box"
+                    <div class="links-box audio"
                         style="background-image: url(images/left-ear.png), url(images/right-ear.png);">
 
                         <figure>
